[package]
name = "expression_trees"
version = "0.1.0"
authors = ["Kaushik Kulkarni <kaushikcfd@gmail.com>"]
edition = "2018"

[lib]
name = "expression_trees"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
macro_defs = { path = "./macro_defs" }
nom = "7.1.1"
regex = "1.6.0"
