[package]
name = "symoxide"
version = "0.1.2"
authors = ["Kaushik Kulkarni <kaushikcfd@gmail.com>"]
edition = "2021"
description = "Intermediate Representation and Transformations for Computer Algebra Systems"
documentation = "https://docs.rs/symoxide"
license = "MIT"
readme = "README.md"

[lib]
name = "symoxide"
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
env_logger = "0.9.0"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
lazy_static = "1.4.0"
log = "0.4.17"
symoxide_macros = "0.1.0"
pytools-rs = "0.1.1"
regex = "1.6.0"
hashbrown = "0.12.3"
smallvec = "1.10.0"
